MAPREDUCE-2096. Secure local filesystem IO from symlink vulnerabilities. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1056000 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -458,6 +458,8 @@ Release 0.22.0 - Unreleased
 
     MAPREDUCE-714. JobConf.findContainingJar unescapes unnecessarily on linux (todd)
 
+    MAPREDUCE-2096. Secure local filesystem IO from symlink vulnerabilities (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
